--- a/application/modules/performer/views/scripts/contacts/index.phtml
+++ b/application/modules/performer/views/scripts/contacts/index.phtml
@@ -7,7 +7,7 @@
         </div>
 
 
-    <h3>О проекте</h3>
+<!--    <h3>О проекте</h3>-->
     <div class="col-sm-12">
         <?= $this->contacts['content'] ?>
     </div>
