--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -69,7 +69,7 @@
           <span class="price-sales">
               Баланс:</span> 
               <span id="balSpan"><?= $this->user['balance']; ?></span> баллов
-              <a class="btn btn-primary btn-xs" href="<?= $this->baseUrl().'/performer/payment/index/' ?>">Пополнить баланс</a>
+<!--              <a class="btn btn-primary btn-xs" href="<? $this->baseUrl().'/performer/payment/index/' ?>">Пополнить баланс</a>-->
            
       </div>
 
