--- a/application/modules/customer/views/scripts/about/index.phtml
+++ b/application/modules/customer/views/scripts/about/index.phtml
@@ -7,7 +7,7 @@
         </div>
 
 
-    <h3>О проекте</h3>
+<!--    <h3>О проекте</h3>-->
     <div class="col-sm-12">
         <?= $this->about['content'] ?>
     </div>
