--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -280,7 +280,10 @@
     </div>
 
 <!--------------------------->
-
+<?php if(!$this->user['phonenumber']){
+    $this->user['phonenumber'] = 0;
+}
+?>
 <script>
 $(document).ready(function(){ 
     $('#tasksTable').DataTable({
