--- a/application/modules/customer/views/scripts/performers/index.phtml
+++ b/application/modules/customer/views/scripts/performers/index.phtml
@@ -17,7 +17,7 @@
                 <?php } ?> 
               </select>
             </div>
-          <div class="change-view pull-right">
+<!--          <div class="change-view pull-right">
               <a href="#" title="List" id="listView" class="list-view">
                   <i class="fa fa-th-list"></i>
               </a> 
@@ -25,25 +25,33 @@
                   <i class="fa fa-th-large"></i>
               </a>
               
-          </div>
+          </div>-->
         </div>
       </div>
       <!--/.productFilter-->
       <div class="row  categoryProduct xsResponse clearfix">
           <?php if(!empty($this->performers)){?>
         <?php foreach($this->performers as $performer){?>  
-         
-            <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6 list-view">
-              <div class="product">
+    <div class="item col-lg-3 col-md-3 col-sm-4 col-xs-6 productBlock list-view">
 
-                <div class="image">  
-                    <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
-                        <img src="<?= $this->baseUrl().'/images/users_images/'.$performer['u_image'] ?>" style="max-height: 110px" class="img-responsive img-thumbnail" alt="img" >
-                    </a>
-                    
+            <div class="col-sm-2">
+              
+               <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
+                   <div style="background: center no-repeat url(<?= $this->baseUrl().'/images/users_images/'.$performer['u_image'] ?>); height:122px; width: 160px; background-size: contain; margin-top: 10px" src="" alt="img" class="img-thumbnail img-responsive"></div>          
+                   
+                </a>  
+              
+            </div>
+            <div class="col-sm-10">
+                <div class="col-sm-9">                
+                    <h4 style="margin-top: 15px !important">
+                        <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
+                             <?= $performer['u_username'].' '.mb_substr($performer['u_surname'], 0, 1, 'utf-8').'.' ?>
+                        </a>
+                    </h4>
                 </div>
-                <div class="description">
-                    <?php  
+                <div class="col-sm-3">                
+                                       <?php  
                         $tasksObj = new Performer_Model_DbTable_TasksModel();
                         $tasksAmount = count($tasksObj->getPerformersTasks($performer['u_id']));
                         if($tasksAmount > 0){
@@ -98,29 +106,19 @@
                     <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
                         <?php } }?>
                   </ul>
-                  <h4>
-                      
-                        <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
-                            <?= $performer['u_username'].' '.mb_substr($performer['u_surname'], 0, 1, 'utf-8').'.' ?>
-                        </a>
-                  </h4>
+                </div>
+                <div class="col-sm-12"> 
                     <small>Выполненных задач : <?= $tasksAmount ?></small>
-                  
-<!--                    <div class="grid-description">-->
-                        <p><?= $performer['u_about'] ?></p>
-<!--                    </div>-->
+                </div>
+                <div class="col-sm-12"> 
+                    <p><?= $performer['u_about']?> </p>
+                </div>
+            
               </div>
-<!--                <div class="price"> <span><? $this->task['customers_price'] ?> </span>руб </div>-->
-<!--                <div class="action-control"> 
-                    
-                        <a class="btn btn-primary" href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id'] ?>"> 
-                            <span class="add2cart">
-                                Подробнее
-                            </span> 
-                        </a> 
-                </div>-->
-              </div>
-            </div>
+
+        </div>
+ 
+
         <?php } ?>
         <?php }else{ ?>
           <h4>Исполнителей по данной категории пока нет</h4>
