--- a/application/modules/performer/views/scripts/about/index.phtml
+++ b/application/modules/performer/views/scripts/about/index.phtml
@@ -2,12 +2,12 @@
         <div class="breadcrumbDiv col-lg-12">
               <ul class="breadcrumb">
                   <li> <a href="<?= $this->baseUrl().'/performer/index' ?>">Главная</a> </li>
-                 <li class="active" >О проекте</li>
+                 <li class="active" >Как это работает</li>
               </ul>
         </div>
 
 
-    <h3>О проекте</h3>
+<!--    <h3>О проекте</h3>-->
     <div class="col-sm-12">
         <?= $this->about['content'] ?>
     </div>
