--- a/application/modules/performer/views/scripts/index/tasks.phtml
+++ b/application/modules/performer/views/scripts/index/tasks.phtml
@@ -38,71 +38,55 @@
               <?php } ?>
             </select>
           </div>
-          <div class="change-view pull-right">
+<!--          <div class="change-view pull-right">
               <a href="#" title="Grid" class="grid-view">
                   <i class="fa fa-th-large"></i> </a>
               <a href="#" title="List" id="listView" class="list-view ">
                   <i class="fa fa-th-list"></i>
               </a> 
-          </div>
+          </div>-->
         </div>
       </div>
       <!--/.productFilter-->
       <div class="row  categoryProduct xsResponse clearfix">
         <?php foreach($this->tasks as $task){?>  
-          <?php 
-//                $taskPoints = 10*$task['customers_price'];
-//                $taskPoints = $taskPoints/100;
-            ?>
-            <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6 list-view">
-              <div class="product">
+ <!--/.item-->
+        <div class="item col-lg-3 col-md-3 col-sm-4 col-xs-6 productBlock list-view">
 
-                <div class="image">  
-                    <?php //if($this->freePoints >= $taskPoints){?>
-                        <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>" style="max-height: 250px !important;">
-                            <img src="<?= $this->baseUrl().'/images/users_images/'.$task['u_image'] ?>" alt="img" class="img-responsive">
-                        </a>
-                    <?php //}else{?>  
-<!--                        <a data-toggle="modal" data-target="#notallowedModal" style="max-height: 250px !important;">
-                            <img src="<? $this->baseUrl().'/images/users_images/'.$task['u_image'] ?>" alt="img" class="img-responsive">
-                        </a>-->
-                    <?php //} ?> 
+            <div class="col-sm-2">
+               <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>" >
+               <?php if($task['task_image']){?>   
+                   <div style="background: center no-repeat url(<?= $this->baseUrl().'/images/task_images/'.$task['task_image'] ?>); height:122px; width: 160px; background-size: contain; margin-top: 21px" src="" alt="img" class="img-thumbnail img-responsive"></div>
+                  
+               <?php }else{ ?>
+                  <div style="background: center no-repeat url(<?= $this->baseUrl().'/images/task_images/'.$task['task_image'] ?>); height:122px; width: 160px; background-size: contain; margin-top: 21px" src="" alt="img" class="img-thumbnail img-responsive"></div>
+
+               <?php } ?>   
+              </a>
+            </div>
+            <div class="col-sm-10">
+                <div class="col-sm-9">                
+                    <h4 style="margin-top: 15px !important"><a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>" ><?= $task['title'] ?></a></h4>
                 </div>
-                <div class="description">
-                  <h4>
-                      <?php //if($this->freePoints >= $taskPoints){?>
-                        <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>">
-                            <?= $task['title'] ?>
-                        </a>
-                      <?php //}else{?>    
-<!--                        <a data-toggle="modal" data-target="#notallowedModal"></a> -->
-                      <?php //} ?> 
-                  </h4>
-                    <small>Дата исполнения: <?= date("h:00 d.m.y",$task['final_date']) ?></small></br>
-                   
-                  <h3><?= $task['u_username'].' '.mb_substr($task['u_surname'],0,1,'utf-8').'.' ?></h3>
-                    <div class="grid-description">
-                        <p><?= $task['description'] ?></p>
+                <div class="col-sm-3">                
+                    <h4 style="margin-top: 15px !important"> <span><?= $task['price'] ?> бел. рублей</h4>
+                </div>
+                <div class="col-sm-12"> 
+                    <small>Дата исполнения: <?= date( "d.m.Y" ,$task['final_date']) ?> </small>
+                </div>
+                <div class="col-sm-12"> 
+                    <p><?= $task['description'] ?> </p>
+                </div>
+            
+                <div class="col-sm-9"> 
                     </div>
-                  <span ><?= $task['customers_price'] ?> бел. рублей</span> </div>
-<!--                <div class="price"> <span><? $this->task['customers_price'] ?> </span>руб </div>-->
-                <div class="action-control"> 
-                    <?php //if($this->freePoints >= $taskPoints){?>
-                        <a class="btn btn-primary" href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>"> 
-                            <span class="add2cart">
-                                Подробнее
-                            </span> 
-                        </a> 
-                    <?php //}else{?>    
-<!--                        <a class="btn btn-primary" data-toggle="modal" data-target="#notallowedModal"> 
-                            <span class="add2cart">
-                                Подробнее
-                            </span> 
-                        </a> -->
-                    <?php //} ?> 
+                <div class="col-sm-3"> 
+                    <div class="action-control"> <a class="btn btn-primary" href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>"> <span class="add2cart"> Подробнее </span> </a> </div>
                 </div>
               </div>
-            </div>
+
+        </div>
+ 
         <?php } ?>
         <!--/.item-->
       </div>
